[tool.poetry]
name = "uiqmako-api"
version = "0.1.0"
description = ""
authors = ["Mar Jene <mar.jene@somenergia.coop>"]

[tool.poetry.dependencies]
python = "^3.8.8"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
peewee-async = "^0.7.1"
aiopg = "^1.1.0"
python-dotenv = "^0.15.0"
ERPpeek = "^1.7.1"
pool-transport = {git = "git@github.com:Som-Energia/pool_transport.git"}
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"
GitPython = "^3.1.14"
yamlns = "^0.9.1"
Mako = "^1.1.4"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.21.0"
pudb = "^2020.1"
pytest-cov = "^2.11.1"
hypothesis = "^6.8.9"
schemathesis = "^3.6.0"
pytest-pudb = "^0.7.0"
pytest-asyncio = "^0.14.0"
httpx = "^0.17.1"
pytest-mock = "^3.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
